--- a/src/styles/_chat-button.scss
+++ b/src/styles/_chat-button.scss
@@ -1,59 +1,59 @@
 @import './varibles';
 
 #via-connect-btn-container {
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    z-index: 1000;
+    position: fixed !important;
+    right: 20px !important;
+    bottom: 20px !important;
+    z-index: 1000 !important;
 
     .via-connect__button {
-        text-align: center;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-size: 14px;
-        font-weight: 100;
-        font-family: 'Roboto';
-        letter-spacing: 1px;
+        text-align: center !important;
+        text-transform: uppercase !important;
+        text-decoration: none !important;
+        font-size: 14px !important;
+        font-weight: 100 !important;
+        font-family: 'Roboto' !important;
+        letter-spacing: 1px !important;
 
         &:before {
-            border-radius: $circle-size;
-            border: $outside-circle-border solid;
-            border-color: inherit;
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.15), 0 0 15px rgba(0, 255, 204, 0.15) inset;
-            content: "";
-            display: block;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            height: $outside-circle-size;
-            width: $outside-circle-size;
-            margin-left: $outside-circle-margin;
-            margin-top: $outside-circle-margin;
-            opacity: 1;
-            transform: scale(1);
-            transition: all 300ms;
+            border-radius: $circle-size !important;
+            border: $outside-circle-border solid !important;
+            border-color: inherit !important;
+            box-shadow: 0 0 15px rgba(0, 255, 204, 0.15), 0 0 15px rgba(0, 255, 204, 0.15) inset !important;
+            content: "" !important;
+            display: block !important;
+            position: absolute !important;
+            left: 50% !important;
+            top: 50% !important;
+            height: $outside-circle-size !important;
+            width: $outside-circle-size !important;
+            margin-left: $outside-circle-margin !important;
+            margin-top: $outside-circle-margin !important;
+            opacity: 1 !important;
+            transform: scale(1) !important;
+            transition: all 300ms !important;
         }
 
         &:hover:before {
-            transform: scale(1.05);
+            transform: scale(1.05) !important;
         }
 
         &.via-connect__circle {
-            background: inherit;
-            border: none;
-            border-radius: 900px;
-            cursor: pointer;
-            width: $circle-size;
-            height: $circle-size;
-            line-height: $circle-size;
-            position: relative;
-            transition: 0.5s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            background: inherit !important;
+            border: none !important;
+            border-radius: 900px !important;
+            cursor: pointer !important;
+            width: $circle-size !important;
+            height: $circle-size !important;
+            line-height: $circle-size !important;
+            position: relative !important;
+            transition: 0.5s !important;
+            display: flex !important;
+            align-items: center !important;
+            justify-content: center !important;
 
             &:hover {
-                padding: -2px;
+                padding: -2px !important;
             }
         }
     }
