--- a/src/styles/_material.scss
+++ b/src/styles/_material.scss
@@ -4,69 +4,75 @@
   *,
   :before,
   :after {
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
+    box-sizing: border-box !important;
+    font-family: 'Roboto', sans-serif !important;
+    font-size: 12px !important;
   }
 
   // FORM // ============================== //
   .via-connect__form {
 
     h1 {
-      font-size: 1em;
-      font-weight: 300;
-      text-align: center;
-      color: $main-color;
+      font-size: 1em !important;
+      font-weight: 300 !important;
+      text-align: center !important;
+      color: $main-color !important;
     }
 
     h5 {
-      text-align: center;
-      text-transform: uppercase;
-      color: $muted-color;
+      text-align: center !important;
+      text-transform: uppercase !important;
+      color: $muted-color !important;
     }
 
     hr.sep {
-      background: $main-color;
-      box-shadow: none;
-      border: none;
-      height: 2px;
-      width: 25%;
-      margin: 0 auto 45px auto;
+      background: $main-color !important;
+      box-shadow: none !important;
+      border: none !important;
+      height: 2px !important;
+      width: 25% !important;
+      margin: 0 auto 45px auto !important;
     }
 
     .emoji {
-      font-size: 1.2em;
+      font-size: 1.2em !important;
     }
   }
 
   .via-connect__group {
-    position: relative;
+    position: relative !important;
 
     &:not(:last-of-type) {
-      margin-bottom: 15px;
+      margin-bottom: 15px !important;
     }
   }
 
   // INPUTS // ============================== //
   textarea {
-    resize: none;
+    resize: none !important;
     -ms-overflow-style: none
   }
 
   input,
   textarea {
-    background: none;
-    color: $muted-color;
-    padding: 8px 8px 6px 5px;
-    display: block;
-    width: 100%;
-    border: none;
-    border-radius: 0;
-    border-bottom: 1px solid $muted-color;
-    font-size: 14px;
+    background: none !important;
+    color: $muted-color !important;
+    padding: 8px 8px 6px 5px !important;
+    display: block !important;
+    width: 100% !important;
+    border: none !important;
+    border-radius: 0 !important;
+    border-bottom: 1px solid $muted-color !important;
+    font-size: 14px !important;
 
     &:focus {
-      outline: none;
+      outline: none !important;
+    }
+
+    &:valid ~ label {
+      top: -8px !important;
+      font-size: 12px !important;
+      color: $main-color !important;
     }
 
     &:placeholder-shown ~ label {
@@ -76,116 +82,111 @@
 
     &:focus ~ label {
       top: -8px !important;
-      font-size: 12px;
+      font-size: 12px !important;
       color: $main-color !important;
-    }
-    &:valid ~ label {
-      top: -8px;
-      font-size: 12px;
-      color: $main-color;
     }
 
     &:focus ~ .bar:before {
-      width: 100%;
+      width: 100% !important;
     }
   }
 
   input[type="password"] {
-    letter-spacing: 0.3em;
+    letter-spacing: 0.3em !important;
   }
 
   input[type=number]::-webkit-inner-spin-button,
   input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+    -webkit-appearance: none !important;
+    margin: 0 !important;
   }
 
   input[type="textarea"] {
-    -moz-appearance: textfield;
+    -moz-appearance: textfield !important;
   }
 
   label {
-    color: $muted-color;
-    font-size: 12px;
-    font-weight: normal;
-    position: absolute;
-    pointer-events: none;
-    left: 5px;
-    top: 13px;
-    transition: $trans-time ease all;
+    color: $muted-color !important;
+    font-size: 12px !important;
+    font-weight: normal !important;
+    position: absolute !important;
+    pointer-events: none !important;
+    left: 5px !important;
+    top: 13px !important;
+    transition: $trans-time ease all !important;
   }
 
   .via-connect__bar {
-    position: relative;
-    display: block;
-    width: 100%;
+    position: relative !important;
+    display: block !important;
+    width: 100% !important;
 
     &:before {
-      content: '';
-      height: 2px;
-      width: 0;
-      bottom: 0;
-      position: absolute;
-      background: $main-color;
-      transition: $trans-time ease all;
-      left: 0;
+      content: '' !important;
+      height: 2px !important;
+      width: 0 !important;
+      bottom: 0 !important;
+      position: absolute !important;
+      background: $main-color !important;
+      transition: $trans-time ease all !important;
+      left: 0 !important;
     }
   }
 
   // BUTTONS // ============================== //
   .via-connect__btn {
-    background: #fff;
-    color: mix(black, $muted-color, 25%);
-    border: none;
-    border-radius: 3px;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    text-decoration: none;
-    outline: none;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    background: #fff !important;
+    color: mix(black, $muted-color, 25%) !important;
+    border: none !important;
+    border-radius: 3px !important;
+    letter-spacing: 0.06em !important;
+    text-transform: uppercase !important;
+    text-decoration: none !important;
+    outline: none !important;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1) !important;
 
     &:hover {
-      color: mix(black, $muted-color, 30%);
-      box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
+      color: mix(black, $muted-color, 30%) !important;
+      box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12) !important;
     }
 
     &.via-connect__btn-link {
-      background: $main-color;
-      color: #fff;
+      background: $main-color !important;
+      color: #fff !important;
 
       &:hover {
-        background: darken($main-color, 5%);
-        color: #fff;
+        background: darken($main-color, 5%) !important;
+        color: #fff !important;
       }
     }
 
     &.via-connect__btn-submit {
-      background: $main-color;
-      color: mix(white, $main-color, 70%);
+      background: $main-color !important;
+      color: mix(white, $main-color, 70%) !important;
 
       &:hover {
-        background: darken($main-color, 5%);
-        color: mix(white, $main-color, 85%);
+        background: darken($main-color, 5%) !important;
+        color: mix(white, $main-color, 85%) !important;
       }
     }
 
     &.via-connect__btn-cancel {
-      background: #eee;
+      background: #eee !important;
 
       &:hover {
-        background: darken(#eee, 5%);
-        color: mix(black, $muted-color, 30%);
+        background: darken(#eee, 5%) !important;
+        color: mix(black, $muted-color, 30%) !important;
       }
     }
   }
 
   .via-connect__btn-box {
-    text-align: center;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    user-select: none;
-    outline: 0;
+    text-align: center !important;
+    background: transparent !important;
+    border: none !important;
+    cursor: pointer !important;
+    user-select: none !important;
+    outline: 0 !important;
   }
 }
