--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -120,9 +120,10 @@
     background: #fff !important;
     padding: 10px !important;
 
-    p {
+    a {
       color: $p-color !important;
-      font-size: 10px !important;
+      font-size: 11px !important;
+      text-decoration: none !important;
     }
   }
 
@@ -209,7 +210,7 @@
 
   @keyframes spin {
     to {
-      -webkit-transform: rotate(360deg) !important;
+      -webkit-transform: rotate(360deg);
     }
   }
 }
