--- a/src/styles/_chat-button.scss
+++ b/src/styles/_chat-button.scss
@@ -1,60 +1,86 @@
 @import './varibles';
 
 #via-connect-btn-container {
-    position: fixed !important;
-    right: 20px !important;
-    bottom: 20px !important;
-    z-index: 1000 !important;
+  position: fixed !important;
+  right: 20px !important;
+  bottom: 20px !important;
+  z-index: 1000 !important;
 
-    .via-connect__button {
-        text-align: center !important;
-        text-transform: uppercase !important;
-        text-decoration: none !important;
-        font-size: 14px !important;
-        font-weight: 100 !important;
-        font-family: 'Roboto' !important;
-        letter-spacing: 1px !important;
+  .via-connect__button {
+    text-align: center !important;
+    text-transform: uppercase !important;
+    text-decoration: none !important;
+    font-size: 14px !important;
+    font-weight: 100 !important;
+    font-family: 'Roboto' !important;
+    letter-spacing: 1px !important;
 
-        &:before {
-            border-radius: $circle-size !important;
-            border: $outside-circle-border solid !important;
-            border-color: inherit !important;
-            box-shadow: 0 0 15px rgba(0, 255, 204, 0.15), 0 0 15px rgba(0, 255, 204, 0.15) inset !important;
-            content: "" !important;
-            display: block !important;
-            position: absolute !important;
-            left: 50% !important;
-            top: 50% !important;
-            height: $outside-circle-size !important;
-            width: $outside-circle-size !important;
-            margin-left: $outside-circle-margin !important;
-            margin-top: $outside-circle-margin !important;
-            opacity: 1 !important;
-            transform: scale(1) !important;
-            transition: all 300ms !important;
-        }
-
-        &:hover:before {
-            transform: scale(1.05) !important;
-        }
-
-        &.via-connect__circle {
-            background: inherit !important;
-            border: none !important;
-            border-radius: 900px !important;
-            cursor: pointer !important;
-            width: $circle-size !important;
-            height: $circle-size !important;
-            line-height: $circle-size !important;
-            position: relative !important;
-            transition: 0.5s !important;
-            display: flex !important;
-            align-items: center !important;
-            justify-content: center !important;
-
-            &:hover {
-                padding: -2px !important;
-            }
-        }
+    &:before {
+      border-radius: $circle-size !important;
+      border: $outside-circle-border solid !important;
+      border-color: inherit !important;
+      box-shadow: 0 0 15px rgba(0, 255, 204, 0.15), 0 0 15px rgba(0, 255, 204, 0.15) inset !important;
+      content: "" !important;
+      display: block !important;
+      position: absolute !important;
+      left: 50% !important;
+      top: 50% !important;
+      height: $outside-circle-size !important;
+      width: $outside-circle-size !important;
+      margin-left: $outside-circle-margin !important;
+      margin-top: $outside-circle-margin !important;
+      opacity: 1 !important;
+      transform: scale(1) !important;
+      transition: all 300ms !important;
     }
+
+    &:hover:before {
+      transform: scale(1.05) !important;
+    }
+
+    &.via-connect__circle {
+      background: inherit !important;
+      border: none !important;
+      border-radius: 900px !important;
+      cursor: pointer !important;
+      width: $circle-size !important;
+      height: $circle-size !important;
+      line-height: $circle-size !important;
+      position: relative !important;
+      transition: 0.5s !important;
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+
+      &:hover {
+        padding: -2px !important;
+      }
+    }
+
+    &.fade-in {
+      opacity: 1 !important;
+      animation-name: fadeInOpacity;
+      animation-iteration-count: 1 !important;
+      animation-timing-function: ease-in !important;
+      animation-duration: .25s !important;
+    }
+  }
+
+  @keyframes shadow-pulse {
+    0% {
+      box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+    }
+    100% {
+      box-shadow: 0 0 0 25px rgba(0, 0, 0, 0);
+    }
+  }
+
+  @keyframes fadeInOpacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
