--- a/src/styles/_greeting-message.scss
+++ b/src/styles/_greeting-message.scss
@@ -31,7 +31,7 @@
         position: relative !important;
         display: flex !important;
         border-radius: 6px !important;
-        padding: 20px !important;
+        padding: 15px !important;
         background: #fff !important;
         color: #000 !important;
         &:before {
@@ -41,6 +41,19 @@
             bottom: -16px !important;
             right: 15px !important;
             content: '' !important;
+        }
+    }
+
+    &.via-connect__mobile {
+        right: 0 !important;
+        max-width: 100vw !important;
+        min-width: 100vw !important;
+        border-radius: 0 !important;
+        .via-connect__greeting-container {
+            border-radius: 0 !important;
+            &:before {
+                right: 35px !important;
+            }
         }
     }
 
@@ -58,7 +71,9 @@
         margin: 0 !important;
         text-align: left !important;
         font-size: 14px !important;
-        padding-inline-start: 20px !important;
-        padding-left: 20px !important;
+        padding-inline-start: 15px !important;
+        padding-left: 15px !important;
+        padding-inline-end: 15px !important;
+        padding-right: 15px !important;
     }
 }
