--- a/src/styles/_material.scss
+++ b/src/styles/_material.scss
@@ -56,7 +56,7 @@
   input,
   textarea {
     background: none !important;
-    color: $muted-color !important;
+    color: #828385 !important;
     padding: 8px 8px 6px 5px !important;
     display: block !important;
     width: 100% !important;
