--- a/src/styles/_greeting-message.scss
+++ b/src/styles/_greeting-message.scss
@@ -44,7 +44,7 @@
         }
     }
 
-    &.via-connect__mobile {
+    @media only screen and (max-width: 768px) {
         right: 0 !important;
         max-width: 100vw !important;
         min-width: 100vw !important;
