--- a/src/styles/_material.scss
+++ b/src/styles/_material.scss
@@ -71,6 +71,7 @@
 
     &:valid ~ label {
       top: -8px !important;
+      left: 0px !important;
       font-size: 12px !important;
       color: $main-color !important;
     }
@@ -82,6 +83,7 @@
 
     &:focus ~ label {
       top: -8px !important;
+      left: 0px !important;
       font-size: 12px !important;
       color: $main-color !important;
     }
