--- a/src/styles/_chat-button.scss
+++ b/src/styles/_chat-button.scss
@@ -15,6 +15,10 @@
     font-family: 'Roboto' !important;
     letter-spacing: 1px !important;
 
+    svg {
+      cursor: pointer !important;
+    }
+
     &:before {
       border-radius: $circle-size !important;
       border: $outside-circle-border solid !important;
@@ -31,7 +35,7 @@
       margin-top: $outside-circle-margin !important;
       opacity: 1 !important;
       transform: scale(1) !important;
-      transition: all 300ms !important;
+      transition: transform .3s !important;
     }
 
     &:hover:before {
@@ -63,6 +67,44 @@
       animation-iteration-count: 1 !important;
       animation-timing-function: ease-in !important;
       animation-duration: .25s !important;
+    }
+
+    .via-connect__icon-close-svg {
+      width: 18px !important;
+      height: 18px !important;
+      position: absolute !important;
+      left: 50% !important;
+      top: 50% !important;
+      transform: translate(-50%, -50%) scale(.8, .8) rotate(-180deg) !important;
+      opacity: 0 !important;
+      transition: transform .25s cubic-bezier(.4, 0, .2, 1), opacity .25s cubic-bezier(.4, 0, .2, 1) !important;
+      cursor: pointer !important;
+    }
+
+    .via-connect__icon-chat-svg {
+      position: absolute !important;
+      width: 30px !important;
+      height: 30px !important;
+      opacity: 1 !important;
+      transition: transform .25s cubic-bezier(.4,0,.2,1),opacity .25s cubic-bezier(.4,0,.2,1);
+      left: 50% !important;
+      top: 50% !important;
+      transform: translate(-50%, -50%) scale(1, 1) rotate(0) !important;
+      cursor: pointer !important;
+    }
+
+    &.via-connect__icon-container--opened {
+      background: #e73e51 !important;
+
+      .via-connect__icon-close-svg {
+        transform: translate(-50%, -50%) scale(1, 1) rotate(0) !important;
+        opacity: 1 !important;
+      }
+
+      .via-connect__icon-chat-svg {
+        transform: translate(-50%, -50%) scale(.8, .8) rotate(180deg) !important;
+        opacity: 0 !important;
+      }
     }
   }
 
