--- a/src/styles/_material.scss
+++ b/src/styles/_material.scss
@@ -45,12 +45,6 @@
     &:not(:last-of-type) {
       margin-bottom: 15px !important;
     }
-
-    &_area {
-      label {
-        top: 10px !important;
-      }
-    }
   }
 
   input:-webkit-autofill,
@@ -79,6 +73,7 @@
     border-radius: 0 !important;
     border-bottom: 1px solid $muted-color !important;
     font-size: 14px !important;
+    height: 31px !important;
 
     &:focus {
       outline: none !important;
